[gd_scene load_steps=2 format=3 uid="uid://d8k2v3y8rbvq"]

[ext_resource type="Script" path="res://src/ui_new/components/UpgradeInfoPopup.gd" id="1_info"]

[node name="UpgradeInfoPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_info")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PopupPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0

[node name="VBox" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PopupPanel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PopupPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Información del Upgrade"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PopupPanel/VBox/Header"]
layout_mode = 2
text = "✕"

[node name="Description" type="Label" parent="PopupPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Descripción del upgrade"
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PopupPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MilestonesContainer" type="VBoxContainer" parent="PopupPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3